# rongtongjin

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
backend/: .env.example  alembic.ini  main.py  pyproject.toml  requirements.txt  run.py  seed.py  融通金项目介绍.pptx
backend/.claude/skills/pptx/scripts/office/schemas/ISO-IEC29500-4_2016/: dml-main.xsd  dml-spreadsheetDrawing.xsd  shared-documentPropertiesCustom.xsd  shared-documentPropertiesExtended.xsd
backend/alembic/: env.py
backend/app/: __init__.py  config.py  constants.py  database.py  logger_config.py  main.py  router.py
backend/app/api/: router.py
backend/app/api/v1/: __init__.py  auth.py  global_config.py  klines.py  products.py  quotes.py  user_config.py  warns.py
backend/app/core/: dependencies.py  security.py
backend/app/crud/: crud_products.py  crud_user.py
backend/app/models/: __init__.py  metal_global_config.py  metal_kline.py  metal_product.py  metal_quote.py  metal_user_config.py  metal_warn.py  user.py
backend/app/schemas/: __init__.py  metal_global_config.py  metal_kline.py  metal_product.py  metal_quote.py  metal_user_config.py  metal_warn.py  user.py
backend/app/services/: __init__.py  akshare_service.py  auth_service.py  config_service.py  kline_service.py  product_service.py  quote_service.py  scheduler.py  warn_service.py
backend/app/utils/: helpers.py  password_security.py
backend/common/: context.py  enums.py  log.py  model.py
backend/common/exception/: errors.py  exception_handlers.py
backend/common/response/: response_code.py  response_schema.py
backend/common/security/: jwt.py  rbac.py
backend/core/: conf.py  dependencies.py  registrar.py
backend/database/: db.py  redis.py
backend/middleware/: jwt_auth_middleware.py
backend/tests/: conftest.py  test_quotes.py
backend/tests/integration/: .env.test  conftest.py  test_auth.py  test_klines.py  test_products.py  test_quotes.py  test_warns.py
backend/tests/integration/api/: test_configs.py  test_quotes.py
backend/tests/integration/api/auth/: conftest.py  test_auth.py
backend/tests/integration/api/service/: test_products.py
backend/tests/integration/auth/: conftest.py  test_auth.py
backend/tests/integration/conf/: db_manager.py
backend/tests/integration/factories/: base.py  user_factory.py
backend/tests/integration/helps/: assertions.py
backend/tests/integration/utils/: assertions.py  helpers.py  token.py
backend/tests/unittest/: conftest.py
backend/tests/unittest/test_api/: test_auth.py  test_products.py
backend/utils/: encrypt.py  helpers.py  serializers.py  timezone.py  trace_id.py
docs/: api_spec.md  database_schema.md  requirements.md
frontend/: App.tsx  README.txt  app.json  index.js  package-lock.json  package.json
frontend/src/api/: client.ts
frontend/src/components/: KlineChart.tsx  Loading.tsx  ProductCard.tsx  QuoteCard.tsx
frontend/src/navigation/: AppNavigator.tsx
frontend/src/screens/: DomesticQuotesScreen.tsx  InternationalQuotesScreen.tsx  KlineScreen.tsx  LoginScreen.tsx  ProductsScreen.tsx  ProfileScreen.tsx  RegisterScreen.tsx  SpreadConfigScreen.tsx  WarnCreateScreen.tsx  WarnListScreen.tsx
frontend/src/store/: AuthContext.tsx
frontend/src/types/: index.ts
