[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "akshare>=1.18.60",
    "fastapi[standard]>=0.136.1",
    "mypy>=2.1.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.13.3",
    "pymysql>=1.1.3",
    "pytest>=9.0.3",
    "pytest-mock>=3.15.1",
    "python-jose[cryptography]>=3.5.0",
    "sqlalchemy>=2.0.49",
]

[dependency-groups]
dev = [
    "pandas-stubs>=3.0.0.260204",
    "types-passlib>=1.7.7.20260211",
    "types-python-jose>=3.5.0.20260408",
]

[tool.pytest]
addopts = ["-v", "--tb=short", "--strict-markers"]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "unit: Unit tests",
    "integeation: Integeation tests",
]
# 控制台日志
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s %(levelname)-8s %(filename)s %(funcName)s %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

# 文件日志：统一输出到 tests/logs/ 目录
log_file = "tests/integration/logs/pytest_run.log"
log_file_level = "DEBUG"
log_file_format = "%(asctime)s %(levelname)-8s %(name)s %(funcName)s:%(lineno)d - %(message)s"
log_file_date_format = "%Y-%m-%d %H:%M:%S"
