[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "akshare>=1.18.60",
    "apscheduler>=3.11.0",
    "bcrypt>=4.0.0",
    "fastapi[standard]>=0.136.1",
    "pydantic>=2.13.3",
    "pymysql>=1.1.3",
    "python-jose[cryptography]>=3.5.0",
    "sqlalchemy>=2.0.49",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pandas-stubs>=3.0.0.260204",
    "pytest>=9.0.3",
    "pytest-mock>=3.15.1",
    "types-python-jose>=3.5.0.20260408",
]

[tool.pytest]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--log-cli-level=INFO",        # 通过命令行参数控制
]
testpaths = ["tests"]
pythonpath = ["."]
# 清晰定义标记
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
]
# 控制台日志，log_file 日志输出文件的配置最好是交给 conftest.py 管理
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s %(levelname)-8s %(filename)s %(funcName)s %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
